--- a/popup/popup.html
+++ b/popup/popup.html
@@ -27,8 +27,8 @@
     </div>
 
     <div class="actions">
-      <button id="start-recording">Start Recording</button>
-      <button id="stop-recording" disabled>Stop Recording</button>
+      <button id="start">Start Recording</button>
+      <button id="stop" disabled>Stop Recording</button>
     </div>
 
     <div id="output">
