--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Live Notetaker</h1>
+      <h1>Live Note Taker AI</h1>
     </header>
 
     <div class="settings">
@@ -29,13 +29,6 @@
     <div class="actions">
       <button id="start">Start Recording</button>
       <button id="stop" disabled>Stop Recording</button>
-    </div>
-
-    <div id="output">
-      <h2>Transcript:</h2>
-      <p id="transcript"></p>
-      <h2>Notes:</h2>
-      <p id="notes"></p>
     </div>
   </div>
   <script src="popup.js"></script>
