--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,7 +18,7 @@
         <div id="progress"></div>
       </div>
       <p id="timer">00:00</p>
-      <p id="remaining-time">Remaining: 05:00</p>
+      <p id="remaining-time">Remaining: 01:00:00</p>
     </div>
 
     <div class="settings">
@@ -33,8 +33,11 @@
       <button id="start">Start Recording</button>
       <button id="stop" disabled>Stop Recording</button>
     </div>
+    <footer class="footer">
+      <p>View summary tracks in  <a href="https://notetakerai.ajmalnasumudeen.in" target="_blank">Dashboard</a>
+    </footer>
   </div>
-
   <script src="popup.js"></script>
+  <script src="../libs/helpers.js"></script>
 </body>
 </html>
