--- a/popup/popup.html
+++ b/popup/popup.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live Note Taker AI</title>
+  <title>Quick Note AI</title>
   <link rel="stylesheet" href="popup.css">
 </head>
 <body>
   <div class="container">
     <header>
-      <h1>Live Note Taker AI</h1>
+      <h1>Quick Note AI | Live Note t</h1>
     </header>
 
     <div class="status">
@@ -34,7 +34,7 @@
       <button id="stop" disabled>Stop Recording</button>
     </div>
     <footer class="footer">
-      <p>View summary tracks in  <a href="https://notetakerai.ajmalnasumudeen.in" target="_blank">Dashboard</a>
+      <p>View summary tracks in  <a href="https://quicknote.ajmalnasumudeen.in" target="_blank">Dashboard</a>
     </footer>
   </div>
   <script src="popup.js"></script>
