--- a/popup/popup.html
+++ b/popup/popup.html
@@ -9,7 +9,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>Quick Note AI | Live Note t</h1>
+      <h1>Quick Note AI </h1>
+      <p>(Live Note Taker)</p>
     </header>
 
     <div class="status">
