--- a/popup/popup.html
+++ b/popup/popup.html
@@ -38,7 +38,6 @@
       <p>View summary tracks in  <a href="https://quicknote.ajmalnasumudeen.in" target="_blank">Dashboard</a>
     </footer>
   </div>
-  <script src="popup.js"></script>
-  <script src="../libs/helpers.js"></script>
+  <script type="module" src="popup.js"></script>
 </body>
 </html>
