--- a/popup/popup.html
+++ b/popup/popup.html
@@ -35,7 +35,7 @@
       <button id="stop" disabled>Stop Recording</button>
     </div>
     <footer class="footer">
-      <p>View summary tracks in  <a href="https://quicknote.ajmalnasumudeen.in" target="_blank">Dashboard</a>
+      <p>View summary tracks in  <a href="https://quicknote.ajmalnasumudeen.in/#/dashboard" target="_blank">Dashboard</a>
     </footer>
   </div>
   <script type="module" src="popup.js"></script>
